--- a/src/admin/assets/main.scss
+++ b/src/admin/assets/main.scss
@@ -1,5 +1,5 @@
 @import 'transitions';
 body {
-    background-color: #222;
-    color: #f9f9f9;
+    // background-color: #222;
+    // color: #f9f9f9;
 }
